# hostsfile

./: Cargo.toml
.github/workflows/: test.yml
src/: config.rs  hosts.rs  lib.rs  main.rs
tests/: integration_test.rs  lib.rs
tests/fixtures/: hostsfile  hostsfile-with-tags  hostsfile-with-tags.result  missing-end-hostsfile
