[package]
authors = ["Maxime Le Conte des Floris"]
edition = "2018"
name = "ho"
repository = "https://github.com/mlcdf/ho"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.40"
argh = "^0.1.4"
confy = "0.4"
regex = "1.5.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
